--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
      
     <a href="#"><button id="create-button">Creat New Password</button></a>
      </div>
-     <p1><a href=styles.css"><span class="celeb">Create a Page </span></a>for a celebrity, brand or business.</p1>
+     <p1><a href="#"><span class="celeb">Create a Page </span></a>for a celebrity, brand or business.</p1>
     <div id="header-div">
         <header class="main-header"><h1>Facebook</h1></header>
         <p>Facebook helps you connect and share</br> with the people in your life.</p>
